--- a/source/stylesheets/gits.css.less
+++ b/source/stylesheets/gits.css.less
@@ -11,7 +11,8 @@ body {
         padding-bottom: 20px;
         .border-radius(6px,6px,6px,6px);
         aside {
-            border-left: 1px solid rgba(0,0,0,.2);
+            border-left: 1px solid rgba(0,0,0,.1);
+            .box-shadow(rgba(255,255,255,1) -1px 0 0);
             padding-left: 15px;
         }
     }
