add home link to title txt

--- a/source/stylesheets/gits.css.less
+++ b/source/stylesheets/gits.css.less
@@ -4,6 +4,15 @@ body {
     background-image: url(../images/grey_wash_wall.png);
     .header {
       color: #eeeeee;
+      .title {
+          a {
+              color: #eeeeee;
+              text-decoration: none;
+              &:hover {
+                  text-decoration: underline;
+              }
+          }
+      }
     }
     .main {
         background: #e8e8e8 url(../images/paper_fibers.png);
