--- a/source/layout.slim
+++ b/source/layout.slim
@@ -4,7 +4,7 @@ html
     meta[charset="utf-8"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"]
     link[href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet"]
-    link[href="stylesheets/gits.css" rel="stylesheet"]
+    link[href="/stylesheets/gits.css" rel="stylesheet"]
     script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"
     title
       | GHOST IN THE SUIT
@@ -13,8 +13,9 @@ html
   body
     .header
       .container
-        h1
-          | GHOST IN THE SUIT
+        h1.title
+          a href="/"
+            | GHOST IN THE SUIT
         p
           | Excelの泥にまみれても、こころの奥にgeekの灯を。
     .container.main
