make article's title style

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -13,7 +13,7 @@ html
   body
     .header
       .container
-        h1.title
+        h1.site_title
           a href="/"
             | GHOST IN THE SUIT
         p
