--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -1,3 +1,9 @@
 - wrap_layout :layout do
   article
-    = yield
+    .title 
+      .subject
+        = current_article.title
+      .date 
+        = current_article.date
+    .description
+      = yield
