improve article's style in index

--- a/source/stylesheets/gits.css.less
+++ b/source/stylesheets/gits.css.less
@@ -31,7 +31,7 @@ body {
                     font-size: 80%;
                 }
             }
-            .description {
+            .body {
                 margin-left: 5px;
                 h2 {
                     font-size: 130%;
