--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -13,11 +13,14 @@ blog: gits
     p
       = link_to 'Previous page', prev_page
 - page_articles.each_with_index do |article, i|
-  h2
-    = link_to article.title, article
-  span
-      = article.date.strftime('%b %e, %Y')
-  = article.body
+  article
+    .title 
+      .subject
+        = link_to article.title, article
+      .date
+        = article.date.strftime('%b %e, %Y')
+    .body
+      = article.body
 - if paginate
   - if next_page
     p
