--- a/source/stylesheets/gits.css.less
+++ b/source/stylesheets/gits.css.less
@@ -45,6 +45,18 @@ body {
             border-left: 1px solid rgba(0,0,0,.1);
             .box-shadow(rgba(255,255,255,1) -1px 0 0);
             padding-left: 15px;
+            padding-top: 15px;
+            .gadget {
+                margin-bottom: 15px;
+                span.title {
+                    font-size: 130%;
+                }
+                ol {
+                    list-style-type: disc;
+                    padding-left: 0px;
+                    margin: 0 0 0 1em;
+                }
+            }
         }
     }
     .footer {
