add twitter widget

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -42,6 +42,10 @@ html
                     |  (
                     = articles.size
                     | )
+            .gadget#twitter
+              span.title
+                | ツイート
+              = partial :twitter
             .gadget#archives
               span.title
                 | 月別アーカイブ
