use slim in tags, add syntax highlighter

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -5,6 +5,7 @@ html
     meta[http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"]
     link[href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet"]
     link[href="/stylesheets/gits.css" rel="stylesheet"]
+    link[href="/stylesheets/syntax.css" rel="stylesheet"]
     script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"
     title
       | GHOST IN THE SUIT
