--- a/source/layout.slim
+++ b/source/layout.slim
@@ -33,6 +33,8 @@ html
                 - blog.articles[0...10].each do |article|
                   li
                     = link_to article.title+"("+article.date.strftime('%m/%d')+")", article
+            .gadget#adsense
+              = partial :adsense_aside
             .gadget#tags
               span.title
                 | タグ一覧
@@ -58,6 +60,8 @@ html
                     = articles.size
                     | )
     .footer
+      .container
+        = partial :adsense_wide
       .container
         | &copy; uskanda 2010-2013.
         .pull-right
