--- a/source/layout.slim
+++ b/source/layout.slim
@@ -27,38 +27,17 @@ html
         .col-sm-3
           aside
             .gadget#recents
-              span.title
-                | 最近の投稿
-              ol
-                - blog.articles[0...10].each do |article|
-                  li
-                    = link_to article.title+"("+article.date.strftime('%m/%d')+")", article
+              = partial :aside_recents
             .gadget#adsense
               = partial :adsense_aside
             .gadget#tags
-              span.title
-                | タグ一覧
-              ol
-                - blog.tags.each do |tag, articles|
-                  li
-                    = link_to tag, tag_path(tag)
-                    |  (
-                    = articles.size
-                    | )
+              = partial :aside_taglist
             .gadget#twitter
               span.title
                 | ツイート
               = partial :twitter
             .gadget#archives
-              span.title
-                | 月別アーカイブ
-              ol
-              - blog.articles.group_by{|a| a.date.year }.each do |year, articles|
-                  li
-                    = link_to year, blog_year_path(year)
-                    |  (
-                    = articles.size
-                    | )
+              = partial :aside_archive
     .footer
       .container
         = partial :adsense_wide
