--- a/source/layouts/cycle.slim
+++ b/source/layouts/cycle.slim
@@ -12,7 +12,7 @@ html
       = ' - ' + current_article.title unless current_article.nil?
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
   body
-    = partial :header, locals: {site_title: "homesick cyclist", site_subtitle: "Excelの泥にまみれても、こころの奥にgeekの灯を。"}
+    = partial :header, locals: {site_title: "Homesick Cyclist", site_subtitle: "30km乗ったらもう帰りたい。だけど好きなんです。自転車関連、乗車記録/レビュー/TV観戦記"}
     .container.main
       .row
         .col-sm-9
