--- a/source/stylesheets/gits.css.less
+++ b/source/stylesheets/gits.css.less
@@ -39,6 +39,10 @@ body {
                 h3 {
                     font-size: 115%;
                 }
+                h5 {
+                    border-bottom: 1px solid rgba(0,0,0,.1);
+                    .box-shadow(rgba(255,255,255,1) -1px 0 0);
+                }
             }
         }
         aside {
