fix article title's link

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -14,7 +14,7 @@ blog: gits
       = link_to 'Previous page', prev_page
 - page_articles.each_with_index do |article, i|
   article
-    = partial :article_title, locals: {article: article}
+    = partial :article_title, locals: {article: article, with_link: true}
     .body
       = article.body
   hr
