--- a/source/stylesheets/gits.css.less
+++ b/source/stylesheets/gits.css.less
@@ -36,6 +36,9 @@ body {
                          padding-left: 20px;
                          text-shadow: -1px 1px rgba(255,255,255,1);
                          @media (max-width: 768px){font-size: 125%;}
+                         a {
+                             color: #282828;
+                         }
                      }
                      .tags {
                          .label {
