add amazon, fix adsense

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -23,7 +23,7 @@ html
             .gadget#recents
               = partial :aside_recents
             .gadget#adsense
-              = partial :adsense_aside
+              = partial :aside_adsense
             .gadget#tags
               = partial :aside_taglist
             .gadget#twitter
@@ -32,6 +32,8 @@ html
               = partial :twitter
             .gadget#archives
               = partial :aside_archive
+            .gadget#amazon
+              = partial :aside_amazon
     .footer
       .container
         = partial :adsense_wide
