--- a/source/stylesheets/gits.css.less
+++ b/source/stylesheets/gits.css.less
@@ -15,6 +15,16 @@ body {
               }
           }
       }
+      .externals {
+          padding-top: 30px;
+          text-align: right;
+          a {
+              color: #eeeeee;
+              &:hover {
+                  color: #ff6600;
+              }
+          }
+      }
     }
     .main {
         background: #e8e8e8 url(../images/paper_fibers.png);
