--- a/source/layout.slim
+++ b/source/layout.slim
@@ -4,6 +4,7 @@ html
     meta[charset="utf-8"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"]
     link[href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet"]
+    link[href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"]
     link[href="/stylesheets/gits.css" rel="stylesheet"]
     link[href="/stylesheets/syntax.css" rel="stylesheet"]
     script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"
