add build status to footer

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -39,10 +39,11 @@ html
       .container
         = partial :adsense_wide
       .container
-        | &copy; uskanda 2010-2013.
+        | &copy; Yusuke Kanda 2010-2013.
         .pull-right
           | Powered by 
           a href="http://middlemanapp.com"
             | Middleman
-          | .
+          | .    
+          img src="https://travis-ci.org/uskanda/blog.png?branch=master"
     = partial :bottom_js_analytics
