--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -3,15 +3,6 @@ pageable: true
 per_page: 10 
 blog: gits
 ---
-- if paginate && num_pages > 1
-  p
-    | Page 
-    = page_number
-    |  of 
-    = num_pages
-  - if prev_page
-    p
-      = link_to 'Previous page', prev_page
 - page_articles.each_with_index do |article, i|
   article
     = partial :article_title, locals: {article: article, with_link: true}
@@ -19,6 +10,10 @@ blog: gits
       = article.body
   hr
 - if paginate
-  - if next_page
-    p
-      = link_to 'Next page', next_page
+  .paginate_box
+    - if prev_page
+      .pull-left
+        = link_to '前のページ', prev_page
+    - if next_page
+      .pull-right
+        = link_to '次のページ', next_page
