--- a/source/stylesheets/gits.css.less
+++ b/source/stylesheets/gits.css.less
@@ -71,6 +71,9 @@ body {
                 }
             }
         }
+        .paginate_box {
+          font-size: 125%;
+        }
         aside {
             border-left: 1px solid rgba(0,0,0,.1);
             .box-shadow(rgba(255,255,255,1) -1px 0 0);
