refactor layout structure

--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -1,6 +1,6 @@
 - article ||= current_article
 - date = article.date
-- wrap_layout :layout do
+- wrap_layout :gits do
   article
     = partial :article_title
     .body
