--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -4,6 +4,8 @@ per_page: 10
 blog: gits
 ---
 - page_articles.each_with_index do |article, i|
+  - if i == 1 then
+    = partial :adsense_wide
   article
     = partial :article_title, locals: {article: article, with_link: true}
     .body
