hide feed icon if screen is small

--- a/source/partials/_header.slim
+++ b/source/partials/_header.slim
@@ -7,6 +7,6 @@
             = site_title
         p
           = site_subtitle 
-      .col-sm-3.externals
+      .col-sm-3.hidden-xs.externals
         a href="/feed.xml"
           i.fa.fa-rss.fa-3x
