--- a/source/layouts/cycle.slim
+++ b/source/layouts/cycle.slim
@@ -10,7 +10,7 @@
     title
       | GHOST IN THE SUIT
       = ' - ' + current_article.title unless current_article.nil?
-    = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
+    = feed_tag :atom, "cycle/feed.xml", title: "Atom Feed"
   - content_for :header do
     = partial :header, locals: {site_title: "Homesick Cyclist", site_subtitle: "30km乗ったらもう帰りたい。だけど好きなんです。自転車関連、乗車記録/レビュー/TV観戦記"}
   = yield
