fix cycle feed link

--- a/source/partials/_header.slim
+++ b/source/partials/_header.slim
@@ -8,5 +8,5 @@
         p
           = site_subtitle 
       .col-sm-3.hidden-xs.externals
-        a href="/feed.xml"
+        a href="#{blog.options.prefix.to_s}/feed.xml"
           i.fa.fa-rss.fa-3x
