--- a/source/partials/_adsense_wide.slim
+++ b/source/partials/_adsense_wide.slim
@@ -1,8 +1,9 @@
-style
-  | .blogresponsivewide { width: 320px; height: 50px; }
-  | @media(min-width: 500px) { .blogresponsivewide { width: 468px; height: 60px; } }
-  | @media(min-width: 800px) { .blogresponsivewide { width: 728px; height: 90px; } }
-script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-ins class="adsbygoogle blogresponsivewide" style="display:inline-block" data-ad-client="ca-pub-1385530273298456" data-ad-slot="4816571790"
-script
-  | (adsbygoogle = window.adsbygoogle || []).push({});
+.text-center
+  style
+    | .blogresponsivewide { width: 320px; height: 50px; }
+    | @media(min-width: 500px) { .blogresponsivewide { width: 468px; height: 60px; } }
+    | @media(min-width: 800px) { .blogresponsivewide { width: 728px; height: 90px; } }
+  script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+  ins class="adsbygoogle blogresponsivewide" style="display:inline-block" data-ad-client="ca-pub-1385530273298456" data-ad-slot="4816571790"
+  script
+    | (adsbygoogle = window.adsbygoogle || []).push({});
