change greedy blog style

--- a/source/stylesheets/greedy.css.less
+++ b/source/stylesheets/greedy.css.less
@@ -2,7 +2,7 @@
 @import "date.less";
 
 body {
-    background-image: url(../images/retina_wood.png);
+    background-image: url(../images/grey.png);
     .header {
       color: #222222;
       text-shadow: -1px 1px rgba(0,0,0,.2);
@@ -28,7 +28,7 @@ body {
       }
     }
     .main {
-        background: #e8e8e8 url(../images/paper_fibers.png);
+        background: rgba(255,255,255,.7);
         color: #282828;
         padding-bottom: 20px;
         .border-radius(6px,6px,6px,6px);
