--- a/source/stylesheets/greedy.css.less
+++ b/source/stylesheets/greedy.css.less
@@ -1,100 +1,7 @@
-@import "elements.less";
-@import "date.less";
+@import "main.less";
 
-body {
-    background-image: url(../images/grey.png);
-    .header {
-      color: #222222;
-      text-shadow: -1px 1px rgba(0,0,0,.2);
-      .site_title {
-          a {
-              color: #222222;
-              text-decoration: none;
-              text-shadow: -1px 1px rgba(0,0,0,.2);
-              &:hover {
-                  text-decoration: underline;
-              }
-          }
-      }
-      .externals {
-          padding-top: 30px;
-          text-align: right;
-          a {
-              color: #eeeeee;
-              &:hover {
-                  color: #ff6600;
-              }
-          }
-      }
-    }
-    .main {
-        background: rgba(255,255,255,.7);
-        color: #282828;
-        padding-bottom: 20px;
-        .border-radius(6px,6px,6px,6px);
-        article {
-            padding-top: 15px;
-            .title {
-                .date {
-                  float: left;
-                  width: 60px;
-                  margin-right: 10px;
-                }
-                .container {
-                     width: auto;
-                     .subject {
-                         font-size: 150%;
-                         padding-left: 20px;
-                         text-shadow: -1px 1px rgba(255,255,255,1);
-                         @media (max-width: 768px){font-size: 125%;}
-                         a {
-                             color: #282828;
-                         }
-                     }
-                     .tags {
-                         .label {
-                             margin-right: 0.5em;
-                         }
-                     }
-                }
-            }
-            .body {
-                margin-left: 5px;
-                h2 {
-                    font-size: 130%;
-                }
-                h3 {
-                    font-size: 115%;
-                }
-                h5 {
-                    border-bottom: 1px solid rgba(0,0,0,.1);
-                    .box-shadow(rgba(255,255,255,1) -1px 0 0);
-                }
-            }
-        }
-        .paginate_box {
-          font-size: 125%;
-        }
-        aside {
-            border-left: 1px solid rgba(0,0,0,.1);
-            .box-shadow(rgba(255,255,255,1) -1px 0 0);
-            padding-left: 15px;
-            padding-top: 15px;
-            .gadget {
-                margin-bottom: 15px;
-                span.title {
-                    font-size: 130%;
-                }
-                ol {
-                    list-style-type: disc;
-                    padding-left: 0px;
-                    margin: 0 0 0 1em;
-                }
-            }
-        }
-    }
-    .footer {
-      color: #eeeeee;
-      margin-top: 15px;
-    }
-}
+@background-image: url(../images/grey.png);
+@background-text-color: #333333;
+@background-text-shadow: 1px -1px rgba(0,0,0,.2);
+@main-background-image: rgba(255,255,255,.7);
+@main-text-color: #282828;
