--- a/source/partials/_header.slim
+++ b/source/partials/_header.slim
@@ -3,7 +3,7 @@
     .row
       .col-sm-9
         h1.site_title
-          a href="/"
+          a href="#{blog.options.prefix.to_s}/"
             = site_title
         p
           = site_subtitle 
