--- a/source/partials/_article_title.slim
+++ b/source/partials/_article_title.slim
@@ -1,5 +1,6 @@
 - article ||= current_article
 - date = article.date
+- url = article.url
 - with_link ||= false
 .title 
   a.date[rel="bookmark"]
@@ -18,4 +19,6 @@
       - article.tags.each do |tag|
         .label.label-primary
           = tag
+/    .socials
+/      = partial :social_button_top, locals: {url: url}
   .clearfix
