--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -62,6 +62,7 @@ body {
                          .label {
                              margin-right: 0.5em;
                          }
+                         margin-bottom: 5px;
                      }
                 }
             }
@@ -82,6 +83,14 @@ body {
                 h5 {
                     border-bottom: 1px solid rgba(0,0,0,.1);
                     .box-shadow(rgba(255,255,255,1) -1px 0 0);
+                }
+            }
+            .social_buttons_bottom {
+                margin-left: auto;
+                margin-right: auto;
+                & > div {
+                    margin-left: 5px;
+                    margin-right: 5px;
                 }
             }
         }
