--- a/source/layouts/cycle.slim
+++ b/source/layouts/cycle.slim
@@ -1,6 +1,7 @@
 - wrap_layout :layout do
   - content_for :head do
     meta[charset="utf-8"]
+    meta[name="viewport" content="width=device-width, initial-scale=1.0"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"]
     link[href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet"]
     link[href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"]
