--- a/source/layouts/greedy.slim
+++ b/source/layouts/greedy.slim
@@ -2,6 +2,7 @@
   - content_for :head do
     meta[charset="utf-8"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"]
+    meta[name="viewport" content="width=device-width, initial-scale=1.0"]
     link[href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet"]
     link[href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"]
     link[href="/stylesheets/greedy.css" rel="stylesheet"]
