add links to other blogs

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -28,6 +28,18 @@ html
     .footer
       .container
         = partial :adsense_wide
+      .container.blog_list
+        | ブログ一覧
+        ul
+          li
+            a.foreground_color href="http://blog.uskanda.com/"
+              | GHOST IN THE SUIT - Web開発/サーバ/ガジェット等、IT系情報を中心に
+          li
+            a.foreground_color href="http://blog.uskanda.com/cycle/"
+              | Homesick Cyclist - ロードバイク関連
+          li
+            a.foreground_color href="http://blog.uskanda.com/greedy/"
+              | 物欲遡及決裁 - 買っちゃったもののレビュー 
       .container
         a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"
           img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png"
