--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -15,6 +15,7 @@ body {
       color: @background-text-color;
       text-shadow: @background-text-shadow;
       .site_title {
+          font-weight: bold;
           a {
               color: @background-text-color;
               text-decoration: none;
@@ -51,6 +52,7 @@ body {
                      width: auto;
                      .subject {
                          font-size: 150%;
+                         font-weight: bold;
                          padding-left: 20px;
                          text-shadow: -1px 1px rgba(255,255,255,1);
                          @media (max-width: 768px){font-size: 125%;}
