improve tag design

--- a/source/partials/_article_title.slim
+++ b/source/partials/_article_title.slim
@@ -18,6 +18,8 @@
     .tags
       - article.tags.each do |tag|
         .label.label-primary
+          i.fa.fa-tag
+          |  
           = tag
 /    .socials
 /      = partial :social_button_top, locals: {url: url}
