--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -4,7 +4,7 @@
 @rss-color: #ff6600;
 @background-image: url(../images/grey_wash_wall.png);
 @background-text-color: #eeeeee;
-@background-text-shadow: 1px -1px rgba(0,0,0,1);
+@background-text-shadow: 0 1px 2px rgba(0,0,0,.3);
 @h-border-color: #ccc;
 @main-background-image: #e8e8e8 url(../images/paper_fibers.png);
 @main-text-color: #282828;
@@ -54,7 +54,7 @@ body {
                          font-size: 150%;
                          font-weight: bold;
                          padding-left: 20px;
-                         text-shadow: -1px 1px rgba(255,255,255,1);
+                         text-shadow: 0px 1px 2px rgba(0,0,0,.2);
                          @media (max-width: 768px){font-size: 125%;}
                          a {
                              color: @main-text-color;
@@ -62,6 +62,7 @@ body {
                      }
                      .tags {
                          .label {
+                             font-size: 100%;
                              margin-right: 0.5em;
                          }
                          margin-bottom: 5px;
