--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -51,10 +51,11 @@ body {
                 .container {
                      width: auto;
                      .subject {
-                         font-size: 150%;
+                         font-size: 175%;
                          font-weight: bold;
                          padding-left: 20px;
                          text-shadow: 0px 1px 2px rgba(0,0,0,.2);
+                         @media (max-width: 1024px){font-size: 150%;}
                          @media (max-width: 768px){font-size: 125%;}
                          a {
                              color: @main-text-color;
@@ -63,6 +64,8 @@ body {
                      .tags {
                          .label {
                              font-size: 100%;
+                             @media (max-width: 1024px){font-size: 90%;}
+                             @media (max-width: 768px){font-size: 80%;}
                              margin-right: 0.5em;
                          }
                          margin-bottom: 5px;
