add blockquote style

--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -90,6 +90,16 @@ body {
                     border-bottom: 1px solid rgba(0,0,0,.1);
                     .box-shadow(rgba(255,255,255,1) -1px 0 0);
                 }
+                blockquote {
+                    padding:30px;
+                    margin:0px 30px;
+                    border: 2px solid rgba(0,0,0,.2);
+                    border-radius: 5px;
+                    background: url(../images/blockquote_s.png), url(../images/blockquote_e.png);
+                    background-repeat:no-repeat,no-repeat;
+                    background-position:top left,bottom right;
+                    background-color: rgba(255,255,255,.2);
+                }
             }
             .social_buttons_bottom {
                 margin-left: auto;
