--- a/source/layouts/cycle.slim
+++ b/source/layouts/cycle.slim
@@ -9,7 +9,7 @@
     link[href="/stylesheets/syntax.css" rel="stylesheet"]
     script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"
     title
-      | GHOST IN THE SUIT
+      | Homesick Cyclist
       = ' - ' + current_article.title unless current_article.nil?
     = feed_tag :atom, "cycle/feed.xml", title: "Atom Feed"
   - content_for :header do
