add styles for img in article

--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -100,6 +100,10 @@ body {
                     background-position:top left,bottom right;
                     background-color: rgba(255,255,255,.2);
                 }
+                img {
+                    max-width: 100%;
+                    height: auto;
+                }
             }
             .social_buttons_bottom {
                 margin-left: auto;
