change side title to bold font

--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -126,6 +126,7 @@ body {
                 margin-bottom: 15px;
                 span.title {
                     font-size: 130%;
+                    font-weight: bold;
                 }
                 ol {
                     list-style-type: disc;
