improve table sytle

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -56,4 +56,5 @@ html
             | Travis CI
           | .  
           img src="https://travis-ci.org/uskanda/blog.png?branch=master"
+    = yield_content :bottom_js
     = partial :bottom_js_analytics
