--- a/source/layouts/greedy.slim
+++ b/source/layouts/greedy.slim
@@ -7,11 +7,14 @@
     link[href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"]
     link[href="/stylesheets/greedy.css" rel="stylesheet"]
     link[href="/stylesheets/syntax.css" rel="stylesheet"]
-    script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"
     title
       | 物欲遡及決裁
       = ' - ' + current_article.title unless current_article.nil?
     = feed_tag :atom, "cycle/feed.xml", title: "Atom Feed"
   - content_for :header do
     = partial :header, locals: {site_title: "物欲遡及決裁", site_subtitle: "なんか買ったら書く、懺悔のレビュー。"}
+  - content_for :bottom_js do
+    script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"
+    script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"
+    script src="/javascripts/greedy.js"
   = yield
