add social button to second, third blog

--- a/source/layouts/greedy_article.slim
+++ b/source/layouts/greedy_article.slim
@@ -7,4 +7,5 @@
         = current_article.date
     .body
       = yield
+      = partial :social_button_bottom, locals: {url: article.url}
       = partial "comment"
