--- a/source/layouts/greedy_article.slim
+++ b/source/layouts/greedy_article.slim
@@ -1,10 +1,8 @@
+- article ||= current_article
+- date = article.date
 - wrap_layout :greedy do
   article
-    .title 
-      .subject
-        = current_article.title
-      .date 
-        = current_article.date
+    = partial :article_title
     .body
       = yield
       = partial :social_button_bottom, locals: {url: article.url}
