--- a/source/partials/_social_button_bottom.slim
+++ b/source/partials/_social_button_bottom.slim
@@ -1,5 +1,9 @@
 .social_buttons_bottom.row
   .pull-left
+    a href="https://twitter.com/share" class="twitter-share-button" data-url="http://blog.uskanda.com#{url}" data-via="uskanda" data-lang="ja" data-related="anywhereTheJavascriptAPI" data-count="vertical">ツイート</a>
+    script
+      | !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+  .pull-left
     a href="http://b.hatena.ne.jp/entry/blog.uskanda.com#{url}" class="hatena-bookmark-button" data-hatena-bookmark-layout="vertical-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"
       img src="http://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;"
     script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"
@@ -17,3 +21,4 @@
         po.src = 'https://apis.google.com/js/platform.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
       })();
+
