--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -106,6 +106,7 @@ body {
                 }
             }
             .social_buttons_bottom {
+                margin-top: 8px;
                 margin-left: auto;
                 margin-right: auto;
                 & > div {
