--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -47,6 +47,7 @@ body {
                   float: left;
                   width: 60px;
                   margin-right: 10px;
+                  margin-bottom: 6px;
                 }
                 .container {
                      width: auto;
@@ -54,9 +55,16 @@ body {
                          font-size: 175%;
                          font-weight: bold;
                          padding-left: 20px;
+                         margin-bottom: 8px;
                          text-shadow: 0px 1px 2px rgba(0,0,0,.2);
-                         @media (max-width: 1024px){font-size: 150%;}
-                         @media (max-width: 768px){font-size: 125%;}
+                         @media (max-width: 1024px){
+                             margin-bottom: 6px;
+                             font-size: 150%;
+                         }
+                         @media (max-width: 768px){
+                             margin-bottom: 4px;
+                             font-size: 125%;
+                         }
                          a {
                              color: @main-text-color;
                          }
