add feedly button

--- a/source/partials/_social_button_bottom.slim
+++ b/source/partials/_social_button_bottom.slim
@@ -21,4 +21,8 @@
         po.src = 'https://apis.google.com/js/platform.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
       })();
-
+  .pull-left
+    a href="http://cloud.feedly.com/#subscription%2Ffeed%2Fhttp%3A%2F%2Fblog.uskanda.com%2F" class="feedlyButton" target="_blank" title="このブログのRSSをFeedlyで購読してみませんか"
+      .arrow_box_feedly
+          i.fa.fa-rss.fa-lg
+      img id="feedlyFollow" src="http://s3.feedly.com/img/follows/feedly-follow-rectangle-volume-medium_2x.png" alt="follow us in feedly" width="66" height="20"
