--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -121,6 +121,58 @@ body {
                     margin-left: 5px;
                     margin-right: 5px;
                 }
+                a.feedlyButton {
+                    color: #777777;
+                    text-align: center;
+                    text-decoration: none;
+                }
+                a.feedlyButton:hover {
+                    color: #333333;
+                }
+                a.feedlyButton:visited {
+                    color: #777777;
+                }
+                .arrow_box_feedly {
+                    background: none repeat scroll 0 0 #FFFFFF;
+                    border: 1px solid #CCCCCC;
+                    border-radius: 3px 3px 3px 3px;
+                    height: 33px;
+                    width: 66px;
+                    margin-bottom: 8px;
+                    position: relative;
+                    padding-top: 3px;
+                    -webkit-box-sizing: border-box;
+                    -moz-box-sizing: border-box;
+                    -ms-box-sizing: border-box;
+                    box-sizing: border-box;
+                }
+                .arrow_box_feedly:after, .arrow_box_feedly:before {
+                    border: medium solid transparent;
+                    content: " ";
+                    height: 0;
+                    left: 50%;
+                    pointer-events: none;
+                    position: absolute;
+                    top: 100%;
+                    width: 0;
+                }
+                .arrow_box_feedly:after {
+                    border-color: #FFFFFF rgba(255, 255, 255, 0) rgba(255, 255, 255, 0);
+                    border-width: 4px;
+                    margin-left: -4px;
+                }
+                .arrow_box_feedly:before {
+                    border-color: #CCCCCC rgba(204, 204, 204, 0) rgba(204, 204, 204, 0);
+                    border-width: 5px;
+                    margin-left: -5px;
+                }
+                .arrow_box_feedly img {
+                    margin: 0;
+                    border: none;
+                }
+                .arrow_box_feedly span {
+                    line-height: 35px;
+                }
             }
         }
         .paginate_box {
