add style to show_article_btn

--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -112,6 +112,9 @@ body {
                     max-width: 100%;
                     height: auto;
                 }
+                .show_article_btn {
+                    margin-top: 5px;
+                }
             }
             .social_buttons_bottom {
                 margin-top: 8px;
