--- a/source/stylesheets/main.less
+++ b/source/stylesheets/main.less
@@ -197,6 +197,11 @@ body {
                     padding-left: 0px;
                     margin: 0 0 0 1em;
                 }
+                ol.month_archives {
+                    li {
+                      margin-left: 10px;
+                    }
+                }
             }
         }
     }
