--- a/source/layouts/gits.slim
+++ b/source/layouts/gits.slim
@@ -11,6 +11,9 @@
       | GHOST IN THE SUIT
       = ' - ' + current_article.title unless current_article.nil?
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
+    meta[property="og:site_name" content="GHOST IN THE SUIT"]
+    meta[property="og:title" content="#{current_article.nil? ? '' : current_article.title}"]
+    meta[property="og:type" content="blog"]
   - content_for :header do
     = partial :header, locals: {site_title: "GHOST IN THE SUIT", site_subtitle: "Excelの泥にまみれても、こころの奥にgeekの灯を。"}
   - content_for :bottom_js do
