add zenback to gits

--- a/source/layouts/article_layout.slim
+++ b/source/layouts/article_layout.slim
@@ -7,3 +7,4 @@
       = yield
       = partial :social_button_bottom, locals: {url: article.url}
       = partial "comment"
+      = partial "zenback_gits"
